# reward_composition_api

./: .gitignore  README.md  START.md  USAGE_DOCUMENTATION.md  example_of_the_run.txt  requirements.txt
api/: .gitignore  README.md  pyproject.toml
api/partials/: atari_score_life.py  example_cartpole.py  hopper_capped_forward_survive.py  hopper_gameable_bounce.py  hopper_levels.py  lunar_lander_approach.py  lunar_lander_levels.py  pusher_gameable.py  pusher_honest.py  reacher_distance_partial.py  reacher_x_only.py  spaceinvaders_gameable_survival.py  spaceinvaders_manual_partial.py  walker2d_survive_forward.py
api/rcomp/: __init__.py  cli.py  config.py  data.py  envs.py  evaluation.py  partiality.py  partials.py  suites.py  sweeps.py  trainer.py
api/rcomp/rewards/: __init__.py  model.py  preferences.py  wrapper.py
api/tests/: conftest.py  test_config.py  test_partiality.py  test_partials.py  test_preferences.py  test_trainer.py
experiments/: run_generic_experiment.py
partials/: cartpole_alive.py  experiment_manual_rewards.py  hopper_capped_forward_survive.py  hopper_half_forward.py  hopper_true_reward.py  lunar_lander_approach.py  lunar_lander_full.py  lunar_lander_partiality_examples.py  pacman_score_life.py  reacher_distance_partial.py  scaled_true_reward_levels.py  spaceinvaders_manual_full.py  spaceinvaders_manual_partial.py  true_reward_scalars.py  walker2d_partiality_examples.py
reward_composition_api/: __init__.py  cli.py  config.py  errors.py  parsing.py  partiality.py  partiality_plot.py  partials.py  registry.py  results.py  summaries.py  sweeps.py
(+129 files in other folders)
